--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <option value="blue">Blue Jeans</option>
                     </select>
                 </label>
-                <label>
+                <label id="phrase">
                     Add a catch phrase
                     <input id="catchphrase-input" />
                     <button id="catchphrase-button">Add</button>
@@ -52,7 +52,7 @@
             <div id="stats">
                 <p id="report"></p>
                 <div id="catchphrases">
-                    
+
                 </div>
             </div>
         </div>
